--- a/src/deptool.in
+++ b/src/deptool.in
@@ -75,7 +75,7 @@ sub usage {
    init [--server=<hostname>] [branch-prefix...]
    checkout <branch-substring...> # checkout branch and dependencies
    pull # pull branch and dependencies
-   build [-t (and test)] [-d (debug build)] [-o (optimize build)]
+   build [-t (and test)] [-d (debug build)] [-o (optimize build)] [-l|local]
    commit [--no-tests] # commit branch after dependencies
    publish # publish branch and dependencies
    cmake # run cmake with special options for current branch
@@ -795,19 +795,17 @@ END
 
 =pod
 
-=head2 build [I<-t>] [I<-d>] [I<-o>] [I<-p>]
+=head2 build [I<-t>] [I<-d>] [I<-o>] [I<-l|--local>]
 
-This command will build the current project directory after building
-and installing all of the dependencies.  The type of build is
-determined by the current directory and the options.  If either -d or
--o are specified, then we perform a debug or an optimized build
-respectively.  If we are in the projects directory or an optimized
-build directory, we perform an optimized build.  If we are in a debug
-build directory, we perform a debug build.  If -t is specified, tests
-will be run in addition to building and installing each of the
-packages.  If -p is specified, then the build is executed in parallel.
-Note that parallel builds are still an experimental feature, they have
-not been extensively tested.
+This command will build the current project directory after building and
+installing all of the dependencies.  The type of build is determined by the
+current directory and the options.  If either -d or -o are specified, then we
+perform a debug or an optimized build respectively.  If we are in the projects
+directory or an optimized build directory, we perform an optimized build.  If
+we are in a debug build directory, we perform a debug build.  If -t is
+specified, tests will be run in addition to building and installing each of the
+packages.  If -l is specified, only the build for the local directory will be
+performed, none of the dependencies will be rebuilt.
 
 If a directory hasn't been configured, then the deptool cmake command
 will be automatically run to configure the package before it is built.
@@ -815,9 +813,8 @@ will be automatically run to configure the package before it is built.
 =cut
 
 sub depBuild {
-    my %options = ('tests' => 0);
+    my %options = (tests => 0, local_only => 0);
 
-    my $parallel = 0; # TODO-2009-09-01: remove this and the warning below
     my $cwd = aliasGetCwd();
     my $debug = buildDebug();
     if ($cwd =~ /^$debug/o) {
@@ -829,14 +826,13 @@ sub depBuild {
     my $ret = GetOptions("t|tests!" => \$options{tests},
                          "o|optimize" => sub { $options{mode} = 'optimize' },
                          "d|debug" => sub { $options{mode} = 'debug' },
-			 "p|parallel!" => \$parallel);
+			 "l|local!" => \$options{local_only});
+			 
     usage("unknown option to build") unless $ret;
 
     $options{builddir} = $options{mode} eq 'debug' ? buildDebug() : buildOpt();
     $options{projects} = projects();
 
-    warn "-p is no longer needed for depbuild"
-	if $parallel;
     return depBuildParallel(\%options);
 }
 
@@ -1402,6 +1398,7 @@ sub depBuildParallel {
 	    deps => {}
 	};
 	
+	next if $options->{local_only};
 	foreach my $dep (@vcdeps) {
 	    my ($dep_project, $dep_sub_type) = parseDependency($dep);
 
