* Beginnings of work to make deptool work off of the tar files that we      release.    * Updates to make-dist.sh for when we do the next release.    * Improve debugging in lintel-flock    * Minor improvements to mercury-plot
make-deptool-bootstrap.sh: rename

make-dist.sh: Generate the tar files first, then use deptool to do the
  necesssary builds.  Add support for building in the chroot.  Incomplete,
  still copying mtn db from ~ rather than published one.  Not yet doing
  the remote builds.

src/CMakeLists.txt: deptool-noexternal -> deptool-bootstrap

deptool.in: Add tarinit command that can unpack and/or download the tar files
  for a build.  [BUGFIX] print out status as we finish out the children so we
  don't keep reporting many jobs running.  [BUGFIX] Regexp's in Safe mode have
  a reference that includes the package.

lintel-flock.in: Add debug mode to help figure out bugs.

make-deptool-bootstrap.sh: rename

mercury-plot.in: Use basename so that we can source files in an hg that are in
  the same dir as the hg, not the current one.  Drop the support for reading
  from stdin -- it doesn't work right when running under parallel make.  Add
  TODO for where to substitute in the yval that we need for 0's to be filled
  in.  Move to global debug.

mercury-plot.sh: Can't run from stdin, need to run from a file.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -143,8 +143,8 @@ IF(PERL_ENABLED)
 ENDIF(PERL_ENABLED)
 
 # Built, but intentionally not installed.
-ADD_CUSTOM_TARGET(deptool-noexternal ALL 
-                  COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/make-deptool-noexternal.sh
+ADD_CUSTOM_TARGET(deptool-bootstrap ALL 
+                  COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/make-deptool-bootstrap.sh
 		          ${CMAKE_CURRENT_SOURCE_DIR} 
 		  DEPENDS deptool.in Lintel/File/Lock.pm Lintel/ProcessManager.pm)
 
